--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -13,5 +13,76 @@ title=Purchase Orders
 #XFLD,45
 z_purchaseorder-display.flpTitle=Purchase Orders
 
+#XTIT: Filter
+PurchaseOrderLabel=Purchase Order 
+CarrierLabel=Carrier 
+FOStatusLabel=FO Status
+FreightOrderLabel=Freight Order
+PickUpLabel=Pick-Up Date
+#XTIT: Line Items
+purchaseOrder=Purchase Order
+fuItemNum=FU Item Number
+fuBlockStatus=Status
+productDesc=Product Description
+productId=Product ID
+quantity=PO Quantity
+POpickuplocation=PO Pickup Location
+fuItmNum=FU Number
+PoPickupDt=PO Pickup Date
+PoDestinLoc= PO Destination Location
+PoDeliDt= PO Delivery Date
+packagingInfo=Packaging Info
+confipackageQty= Confirm Quantity
+loadId=Load ID
+packageType=Package Type
+packageQty=Package Qty
+packageQtyUnit=Package Quantity Unit
+dimensions=Package Dimensions(L x W x H)
+length=Length
+dimensionsUnit=(L x W x H)
+width=Width
+height=Height
+weight=Package Weight
+weightUnit=Weight Unit
+volumn=Volumn
+volumnUnit=Volumn Unit
+pickupLoc=Pick-Up Location
+destinationLoc=Destination Location
+packageid=Package ID
+pickupdate=Pick-Up Date
+shipLoc=Source Location
+reefComply=Refrigerated Container
+destinationDate=Delivery Date
+monetaryVal=Monetary Value
+parcelTrackId=Parcel Tracking ID
+spslInst=Special Instruction
+dangarGoods=Dangerous Goods
+Carrier=Carrier Name 
+pdfViewer=BOL
+pdfUpload=BOL UpLoad
+pdfView=BOL Viewer
+UploadFile=Upload BOL
+
+name=Name
+phoneNumber=Phone Number
+eMail=Email
+accept=Save
+reject=Cancel
+edit=Edit
+split=Split 
+unitDetails=Pack Items
+
+splitQuantity=Split Quantity
+
+poDetails=Purchase Order Details
+pickUpDetails=Pick-Up Details
+packDetails=Packaging Details
+supplierDetails=Supplier Contact Details
+confirm=Do you want to complete the order?
+recordUpdated=Record Updated
+success=Success
+error=Error
+validationErrorMessage=Please fill requried field data
+
 #XFLD,46.5
 z_purchaseorder-display.flpSubtitle=Vendor Portal - Purchase Orders
