filter fixes and update table

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -66,8 +66,8 @@ UploadFile=Upload BOL
 name=Name
 phoneNumber=Phone Number
 eMail=Email
-accept=Save
-reject=Cancel
+accept=OK
+reject=CANCEL
 edit=Edit
 split=Split 
 unitDetails=Pack Items
