column fixes , pickup From & To Date convertion

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -21,7 +21,7 @@ FreightOrderLabel=Freight Order
 PickUpLabel=Pick-Up Date
 #XTIT: Line Items
 purchaseOrder=Purchase Order
-fuItemNum=FU Item Number
+fuItemNum=FU Item 
 fuBlockStatus=Status
 productDesc=Product Description
 productId=Product ID
