icon tab count issue fix, formatter added and new column added

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -28,6 +28,7 @@ productId=Product ID
 quantity=PO Quantity
 POpickuplocation=PO Pickup Location
 fuItmNum=FU Number
+foItm=Freight Order
 PoPickupDt=PO Pickup Date
 PoPickupFromDt=PO Pickup From Date
 PoPickupToDt=PO Pickup To Date
