Date Range issue fixed, remove commented code

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,7 +18,7 @@ PurchaseOrderLabel=Purchase Order
 CarrierLabel=Carrier 
 FOStatusLabel=FO Status
 FreightOrderLabel=Freight Order
-PickUpLabel=Pick-Up Date
+PickUpLabel=Pick-Up Date Range
 #XTIT: Line Items
 purchaseOrder=Purchase Order
 fuItemNum=FU Item 
